Changed form layouts, added new version of Foundation, fixed annoying bug where menu on smaller screens weren't compressing

--- a/system/templates/css/style.css
+++ b/system/templates/css/style.css
@@ -9,8 +9,12 @@ body {
     overflow: hidden;
 }
 
-.top-bar{ height: inherit; }
-
+.search-bar input {
+    height: 1.8rem;
+}
+.search-button {
+    height: 1.8rem;
+}
 button {
     font-size: 0.8rem !important;
 }
@@ -52,7 +56,8 @@ table .section {
     margin-bottom: 10px;
     padding: 5px;
     font-weight: bolder;
-    background-color: #4D88A5;
+    /*background-color: #4D88A5;*/
+    border-bottom: 1px solid black;
 }
 
 .section-body {
